# poirogue

./: .gitignore  .gitmodules  Cargo.toml  README.md  ai.cpp  ai.h  command_interp.cpp  command_interp.h  commands.h  common.h  config.h  cursor.h  debug.cpp  debug.h  engine.cpp  engine.h  graphs.h  hud.cpp  hud.h  install.bat  interactions.h  level.cpp  level.h  map.cpp  map.h  people.cpp  people.h  player.cpp  player.h  plot.cpp  plot.h  poirogue.cpp  poirogue.sln  poirogue.vcxproj  poirogue.vcxproj.filters  readme.md  symbols.h  time.cpp  time.h  utils.h  (+2 more)
data/lists/: colors.yaml  jobs.yaml  monocles.yaml  names.yaml  places.yaml
poirogue-core/: Cargo.toml  memory_usage_log.json  memory_usage_log.yaml
poirogue-core/resources/data/: damage.xp  debug.view.json  frame.xp  normal_vision.script  skull.xp
poirogue-core/src/: colors.rs  commands.rs  core_systems.rs  diagnostics.rs  entity.rs  game.rs  glyph.rs  input.rs  json.rs  main.rs  map.rs  map_gen.rs  maybe.rs  opt.rs  rand_gen.rs  readonly_archive_cave.rs  render_view.rs  rex.rs  store_helpers.rs  tiles.rs
poirogue-core/src/game_systems/: bump.rs  directives.rs  doors.rs  input.rs  intents.rs  inventory.rs  mod.rs  notifications.rs
poirogue-dispatch/: Cargo.toml
poirogue-dispatch/src/: dispatcher.rs  event.rs  lib.rs  listener.rs  tests.rs
resources/data/: big-objects.xp  debug.view.json  game.view.json  poirogue-gallery.xp
src/: characters.rs  command_queue.rs  commands.rs  console.rs  drawable.rs  entity.rs  floor_builder.rs  game.rs  game_state.rs  geometry.rs  glyph.rs  input.rs  json.rs  main.rs  map.rs  map_gen.rs  murder_gen.rs  opt.rs  pawn.rs  player.rs  rand_gen.rs  readonly_archive_cave.rs  render.rs  render_view.rs  renderable.rs  rex.rs  system.rs  tiles.rs  views.rs  views_impl.rs  world.rs
(+6 files in other folders)
