[package]
name = "poirogue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8"
bracket-terminal = "0.8.5"
bracket-random = "0.8.2"
bracket-noise = "0.8.2"
bracket-pathfinding = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rand = { version = "0.8.4", features = ["small_rng"] }
petgraph = "0.6.0"
lazy_static = "1.4.0"
random-names = "0.1.3"
object-pool = "0.5.4"
specs = "0.17.0"
open = "1"
rand_chacha = "0.3.1"
urlencoding = "2.1.0"
strum = "0.23"
strum_macros = "0.23"
bit-set = "0.4.0"
multimap = "0.8.3"
caves = { version = "0.2.1" }
filearco = "0.1.0"
structopt = "0.3.25"