[package]
name = "poirogue-core"
version = "0.1.0"
edition = "2021"

[dependencies]

# Local

# Remove ASAP
rand = { version = "0.8.4", features = ["small_rng"] }
rand_chacha = "0.3.1"
random-names = "0.1.3"

# Utility
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
log = "0.4"
object-pool = "0.5.4"
urlencoding = "2.1.0"
strum = "0.23"
strum_macros = "0.23"
open = "1"
unique_id = "0.1.3"
mnumonic = "0.2.0"

# Communication & Databases
caves = { version = "0.2.1" }
filearco = "0.1.0"
lru = "0.7.0"
structopt = "0.3.25"
pickledb = "0.4.1"

# Bracket
bracket-lib = "0.8"
bracket-terminal = "0.8.5"
bracket-random = "0.8.2"
bracket-noise = "0.8.2"
bracket-pathfinding = "0.8.4"
bracket-color = { version = "0.8.2", features = ["serde", "rex"] }

# Data Structures
petgraph = "0.6.0"
bit-set = "0.4.0"
multimap = "0.8.3"
shipyard = "0.5.0"
simple_ringbuf = "0.1.2"
priority-queue = "1.2.1"